--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "ejs": "^3.0.1",
+    "bootstrap-icons": "^1.0.0-alpha5",
+    "bower": "^1.8.8",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-load": "^1.1.16",
     "method-override": "^3.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.4"
   }
 }
